add forgot password email

--- a/assets/email-verification.html
+++ b/assets/email-verification.html
@@ -19,7 +19,7 @@
         <ul class="social-media-links" style="list-style: none;padding: 0;margin: 0;border-top: 1px solid #ececec;border-bottom: 1px solid #ececec;height: 64px;">
             <li style="margin: 0;width: 20%;text-align: center;border-right: 1px solid #ececec;float: left;padding: 20px 0;"><a href="https://www.facebook.com/sporplatz"><img src="https://gotrust-static.s3-eu-west-1.amazonaws.com/email/_i-facebook.png" alt="FB" style="height: 20px;"></a></li>
             <li style="margin: 0;width: 20%;text-align: center;border-right: 1px solid #ececec;float: left;padding: 20px 0;"><a href="https://twitter.com/sporplatz"><img src="https://gotrust-static.s3-eu-west-1.amazonaws.com/email/_i-twitter.png" id="tw" alt="TWTR" style="height: 20px;"></a></li>
-            <li style="margin: 0;width: 20%;text-align: center;border-right: 1px solid #ececec;float: left;padding: 20px 0;"><a href="https://www.instagram.com/sporplatz/"><img src="https://gotrust-static.s3-eu-west-1.amazonaws.com/email/_i-instagram.png" alt="INST" style="height: 20px;"></a></li>
+            <li class="last-child" style="margin: 0;width: 20%;text-align: center;border-right: 1px solid #ececec;float: left;padding: 20px 0;"><a href="https://www.instagram.com/sporplatz/"><img src="https://gotrust-static.s3-eu-west-1.amazonaws.com/email/_i-instagram.png" alt="INST" style="height: 20px;"></a></li>
         </ul>
     </div>
 </body>
