--- a/assets/forgot-password.html
+++ b/assets/forgot-password.html
@@ -8,7 +8,7 @@
     <div class="general" style="background: #f9fbfd;border: 1px solid #efefef;">
         <div class="white-bg" style="background: #fff;">
             <div class="header" style="border-bottom: 1px solid #ececec;text-align: center;padding: 20px;">
-                <img id="logo" src="https://gotrust-static.s3-eu-west-1.amazonaws.com/email/_logo.png" alt="Interceptd" style="height: 50px;">
+                <img id="logo" src="https://avatars0.githubusercontent.com/u/14931506?s=460&v=4" alt="Sporplatz" style="height: 50px;">
             </div>
             <div class="content" style="padding: 80px;">
                 <div class="h1" style="height: 38px;font-family: &quot;Helvetica&quot;, &quot;HelveticaNeue&quot;, &quot;Arial&quot;;font-size: 32px;font-weight: 100;font-style: normal;font-stretch: normal;line-height: normal;letter-spacing: .6px;text-align: center;color: #4c5054;">
@@ -27,43 +27,21 @@
         </div>
         <ul class="social-media-links" style="list-style: none;padding: 0;margin: 0;border-top: 1px solid #ececec;border-bottom: 1px solid #ececec;height: 64px;">
             <li style="margin: 0;width: 20%;text-align: center;border-right: 1px solid #ececec;float: left;padding: 20px 0;">
-                <a href="https://www.facebook.com/interceptd">
+                <a href="https://www.facebook.com/sporplatz">
                     <img src="https://gotrust-static.s3-eu-west-1.amazonaws.com/email/_i-facebook.png" alt="FB" style="height: 20px;">
                 </a>
             </li>
             <li style="margin: 0;width: 20%;text-align: center;border-right: 1px solid #ececec;float: left;padding: 20px 0;">
-                <a href="https://twitter.com/1nterceptd">
+                <a href="https://twitter.com/sporplatz">
                     <img src="https://gotrust-static.s3-eu-west-1.amazonaws.com/email/_i-twitter.png" id="tw" alt="TWTR" style="height: 20px;">
                 </a>
             </li>
-            <li style="margin: 0;width: 20%;text-align: center;border-right: 1px solid #ececec;float: left;padding: 20px 0;">
-                <a href="https://www.linkedin.com/company/interceptd/">
-                    <img src="https://gotrust-static.s3-eu-west-1.amazonaws.com/email/_i-linkedin.png" alt="IN" style="height: 20px;">
-                </a>
-            </li>
-            <li style="margin: 0;width: 20%;text-align: center;border-right: 1px solid #ececec;float: left;padding: 20px 0;">
-                <a href="https://www.instagram.com/1nterceptd/">
+            <li class="last-child" style="margin: 0;width: 20%;text-align: center;border-right: 1px solid #ececec;float: left;padding: 20px 0;">
+                <a href="https://www.instagram.com/sporplatz/">
                     <img src="https://gotrust-static.s3-eu-west-1.amazonaws.com/email/_i-instagram.png" alt="INST" style="height: 20px;">
                 </a>
             </li>
-            <li class="last-child" style="margin: 0;width: 19%;text-align: center;border-right: 0;float: left;padding: 20px 0;">
-                <a href="https://plus.google.com/u/0/116917847077762925707">
-                    <img src="https://gotrust-static.s3-eu-west-1.amazonaws.com/email/_i-google.png" alt="GOOG" style="height: 20px;">
-                </a>
-            </li>
         </ul>
-        <div class="footer" style="padding: 40px 0 60px;text-align: center;">
-            <div class="p2" style="font-family: &quot;Helvetica&quot;, &quot;HelveticaNeue&quot;, &quot;Arial&quot;;font-size: 12px;font-weight: normal;font-style: normal;font-stretch: normal;line-height: normal;letter-spacing: 0.2px;text-align: center;color: #8d9195;margin-top: 10px;">
-                845 Market Street, Suite 450 - San Francisco, CA 94103
-            </div>
-            <div class="footer-links">
-                <ul style="margin-top: 30px;">
-                    <li style='display: inline-block; font-family: "Helvetica", "HelveticaNeue", "Arial"; font-size: 12px; font-weight: normal; font-style: normal; font-stretch: normal; line-height: normal; letter-spacing: 0.2px; text-align: center; color: #4c5054; margin: 0 5px;'><a href="https://interceptd.com/privacy-policy/" style='text-decoration: none;'>Privacy Policy</a></li>
-                    <li style='display: inline-block; font-family: "Helvetica", "HelveticaNeue", "Arial"; font-size: 12px; font-weight: normal; font-style: normal; font-stretch: normal; line-height: normal; letter-spacing: 0.2px; text-align: center; color: #4c5054; margin: 0 5px;'>•</li>
-                    <li style='display: inline-block; font-family: "Helvetica", "HelveticaNeue", "Arial"; font-size: 12px; font-weight: normal; font-style: normal; font-stretch: normal; line-height: normal; letter-spacing: 0.2px; text-align: center; color: #4c5054; margin: 0 5px;'><a href="https://interceptd.com/terms-of-use/" style='text-decoration: none;'>Terms and Conditions</a></li>
-                </ul>
-            </div>
-        </div>
     </div>
 </body>
 </html>
